# rs-concurrency

./: .gitignore  Cargo.toml  channels.md  tags
log/: Cargo.toml
log-reader/: Cargo.toml  tags
log-reader/data_proc/: Cargo.toml
log-reader/data_proc/src/: lib.rs
log-reader/log-event/: Cargo.toml
log-reader/log-event/src/: lib.rs  log_event.rs
log-reader/log-read/: Cargo.toml
log-reader/log-read/benches/: my_benchmark.rs
log-reader/log-read/src/: main.rs
log/src/: main.rs
